# gpublind

./: .gitignore  README.md  pyproject.toml
analysis/: __init__.py  by_category.py  by_condition.py  common.py  correction.py  funnel.py  report.py
corpus/: __init__.py  schema.py  stats.py  verify.py
data/: available_datasets.md  balanced_subset.json  kernelbench_compute_candidates.jsonl  kernelbot_kernels.jsonl  mine_kernelbench.py  mine_kernelbot.py  mine_latency_bound.py  mine_register_spill.py  mine_sakana.py  mined_kernels.jsonl
docs/: benchmark_card.md  benchmark_design_principles.md  evaluation_protocol.md  ground_truth_methodology.md  methodology.md  reproducibility.md
eval/: analyze_results.py  baselines.py  conditions.py  contamination_test.py  human_eval.py  judge.py  prompts.py  review.py  run_eval.py
profiles/: compile_failures.txt  generate_profiles.py  hardware_roof.json  hw_A.json  hw_B.json  hw_C.json  hw_D.json  hw_E.json  hw_F.json  hw_G.json  hw_H.json  kernelbench_030.json  kernelbot_shared_00_000.json  kernelbot_shared_00_016.json  measure_roof.py
registry/: __init__.py  build_registry.py  kernel_entry.py  registry.json  registry.py
results/: accuracy_table.md  category_breakdown.md  consistency_scores.md  contamination_table.md  difficulty_calibration_table.md  groundedness_table.md  level_sensitivity.md  per_class_accuracy.md  reasoning_quality.md  reasoning_quality_table.md  scores.csv  summary.md  sycophancy_scores.md
scripts/: benchmark_readiness.py  clean_results.py  compile_check.py  corpus_stats.py  create_balanced_subset.py  (+9 more)
(+1905 files in other folders)
